--- a/Css/Mentor/page1.css
+++ b/Css/Mentor/page1.css
@@ -8,13 +8,14 @@
 
 
 .row-1{
-    padding: 10px 20px;
+    padding: 10px 0px;
     box-shadow: 3px 2px 12px #00000052;
     
 }
 
 .logo-jee{
     width: 200px;
+    cursor: pointer;
 }
 
 .noti-main{
@@ -31,8 +32,51 @@
 }
 
 .row-2{
-    height: 100vh;
+    height: 95vh;
     /* background-color: blue; */
+}
+
+.mentor-menu{
+    padding: 40px 0px;
+    margin-left: -15px;
+    margin-right: -15px;
+}
+
+.menu-list{
+    color: white;
+    font-size: 18px;
+    list-style: none;
+    padding: 10px 15px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+.menu-list:hover{
+    background-color: rgba(255, 255, 255, 0.295);
+    cursor: pointer;
+    border-left: 6px solid white;
+}
+
+.heading-mentee{
+    padding: 40px 30px 0 0;
+    color: #0a216f;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+.main-cards{
+    margin-left: 120px;
+    height: 20vh;
+    background-color: rgb(255 255 255);
+    border-radius: 20px;
+}
+
+.img-card{
+    width: 130px;
+    padding: 20px 0 0 10px;
+}
+
+.list-cards {
+    list-style: none;
 }
 
 
