--- a/Static/Templates/Mentor/page1.html
+++ b/Static/Templates/Mentor/page1.html
@@ -23,11 +23,111 @@
             </div>
         </div>
         <div class="row row-2">
-            <div class="col-md-4">
-                SideBar
+            <div class="col-md-2" style="background-color: #0a216f;">
+                <div class="mentor-menu">
+                    
+                        <div class="menu-list ">
+                            <span> <img src="../../../Assets/icons/home.png" alt="" width="20px"> </span> &nbsp;
+                            <span>Home</span>
+                        </div>
+                        <div class="menu-list ">
+                            <span> <img src="../../../Assets/icons/student.png" alt="" width="20px"> </span> &nbsp;
+                            <span>Your Mentees</span>
+                        </div>
+                        <div class="menu-list ">
+                            <span> <img src="../../../Assets/icons/book.png" alt="" width="20px"> </span> &nbsp;
+                            <span>Material Requests</span>
+                        </div>
+                        <div class="menu-list ">
+                            <span> <img src="../../../Assets/icons/RUPEE.png" alt="" width="20px"> </span> &nbsp;
+                            <span>Payment History</span>
+                        </div>
+                    
+                </div>
             </div>
-            <div class="col-md-8">
-                Content
+            <div class="col-md-8 " style="background-color: #f0f3f8;">
+                <div class="heading-mentee">
+                    <h2>
+                        Your Mentees
+                    </h2>
+                </div>
+                <div class="row" >
+                    <div style="width: 100%;padding: 20px;">
+                        <div class="col-md-9 main-cards">
+                            <span>
+                                <img src="../../../Assets/icons/person.png" alt="" width="40px" class="img-card">
+                            </span>
+                            <div style="float: right;margin-right: 40%;">
+                                <ol class="list-cards" style="list-style: none;padding-top: 20px;">
+                                    <li class="pb-1">
+                                        <b>Name</b> - Ayush Singh
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Email</b> - ayush@gmail.com
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Phone No </b> - +918276543211
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Assigned On</b> - July 25th, 2020
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="width: 100%;padding: 20px;">
+                        <div class="col-md-9 main-cards">
+                            <span>
+                                <img src="../../../Assets/icons/person.png" alt="" width="40px" class="img-card">
+                            </span>
+                            <div style="float: right;margin-right: 40%;">
+                                <ol class="list-cards" style="list-style: none;padding-top: 20px;">
+                                    <li class="pb-1">
+                                        <b>Name</b> - Ayush Singh
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Email</b> - ayush@gmail.com
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Phone No </b> - +918276543211
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Assigned On</b> - July 25th, 2020
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="width: 100%;padding: 20px;">
+                        <div class="col-md-9 main-cards">
+                            <span>
+                                <img src="../../../Assets/icons/person.png" alt="" width="40px" class="img-card">
+                            </span>
+                            <div style="float: right;margin-right: 40%;">
+                                <ol class="list-cards" style="list-style: none;padding-top: 20px;">
+                                    <li class="pb-1">
+                                        <b>Name</b> - Ayush Singh
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Email</b> - ayush@gmail.com
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Phone No </b> - +918276543211
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Assigned On</b> - July 25th, 2020
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-2" style="background-color: #f0f3f8">
+                <h1>
+                    
+                </h1>
             </div>
         </div>
     </div>
