--- a/Static/Templates/Mentor/page1.html
+++ b/Static/Templates/Mentor/page1.html
@@ -45,43 +45,23 @@
                     
                 </div>
             </div>
-            <div class="col-md-8 " style="background-color: #f0f3f8;">
+            <div class="col-md-8 main-content-cards" style="background-color: #f0f3f8;">
                 <div class="heading-mentee">
                     <h2>
                         Your Mentees
                     </h2>
                 </div>
-                <div class="row" >
-                    <div style="width: 100%;padding: 20px;">
-                        <div class="col-md-9 main-cards">
-                            <span>
-                                <img src="../../../Assets/icons/person.png" alt="" width="40px" class="img-card">
-                            </span>
-                            <div style="float: right;margin-right: 40%;">
-                                <ol class="list-cards" style="list-style: none;padding-top: 20px;">
-                                    <li class="pb-1">
-                                        <b>Name</b> - Ayush Singh
-                                    </li>
-                                    <li class="pb-1">
-                                        <b>Email</b> - ayush@gmail.com
-                                    </li>
-                                    <li class="pb-1">
-                                        <b>Phone No </b> - +918276543211
-                                    </li>
-                                    <li class="pb-1">
-                                        <b>Assigned On</b> - July 25th, 2020
-                                    </li>
-                                </ol>
-                            </div>
-                        </div>
+                <div class="row row-2" >
+                    <div class="col-md-2 side-space">
+
                     </div>
-                    <div style="width: 100%;padding: 20px;">
-                        <div class="col-md-9 main-cards">
-                            <span>
-                                <img src="../../../Assets/icons/person.png" alt="" width="40px" class="img-card">
-                            </span>
-                            <div style="float: right;margin-right: 40%;">
-                                <ol class="list-cards" style="list-style: none;padding-top: 20px;">
+                    <div class="col-md-9 main-cards">
+                        <div class="row row-card mb-4">
+                            <div class="col-md-3">
+                                <img class="img-card" src="../../../Assets/icons/person.png" alt="" width="40px">
+                            </div>
+                            <div class="col-md-7">
+                                <ol style="list-style: none;padding-top: 20px;">
                                     <li class="pb-1">
                                         <b>Name</b> - Ayush Singh
                                     </li>
@@ -97,14 +77,13 @@
                                 </ol>
                             </div>
                         </div>
-                    </div>
-                    <div style="width: 100%;padding: 20px;">
-                        <div class="col-md-9 main-cards">
-                            <span>
-                                <img src="../../../Assets/icons/person.png" alt="" width="40px" class="img-card">
-                            </span>
-                            <div style="float: right;margin-right: 40%;">
-                                <ol class="list-cards" style="list-style: none;padding-top: 20px;">
+
+                        <div class="row row-card mb-4">
+                            <div class="col-md-3">
+                                <img class="img-card" src="../../../Assets/icons/person.png" alt="" width="40px">
+                            </div>
+                            <div class="col-md-7">
+                                <ol style="list-style: none;padding-top: 20px;">
                                     <li class="pb-1">
                                         <b>Name</b> - Ayush Singh
                                     </li>
@@ -120,6 +99,30 @@
                                 </ol>
                             </div>
                         </div>
+
+                        <div class="row row-card mb-4">
+                            <div class="col-md-3">
+                                <img class="img-card" src="../../../Assets/icons/person.png" alt="" width="40px">
+                            </div>
+                            <div class="col-md-7">
+                                <ol style="list-style: none;padding-top: 20px;">
+                                    <li class="pb-1">
+                                        <b>Name</b> - Ayush Singh
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Email</b> - ayush@gmail.com
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Phone No </b> - +918276543211
+                                    </li>
+                                    <li class="pb-1">
+                                        <b>Assigned On</b> - July 25th, 2020
+                                    </li>
+                                </ol>
+                            </div>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
