--- a/Static/Templates/Mentor/Page36.html
+++ b/Static/Templates/Mentor/Page36.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../../../Css/Bootstrap 5/bootstrap.min.css">
     <link rel="stylesheet" href="../../../Css/Mentor/page1.css">
-    <title>Document</title>
+    <title>Page 35</title>
 </head>
 <body>
     <div class="container-fluid">
@@ -48,77 +48,83 @@
             <div class="col-md-8 main-content-cards" style="background-color: #f0f3f8;">
                 <div class="heading-mentee">
                     <h2>
-                        Your Mentees
+                        Material Request
                     </h2>
                 </div>
-                <div class="row row-2" >
+                <div class="row row-2" style="height: 77vh;">
                     <div class="col-md-2 side-space">
 
                     </div>
                     <div class="col-md-9 main-cards">
                         <div class="row row-card mb-4">
-                            <div class="col-md-3">
-                                <img class="img-card" src="../../../Assets/icons/person.png" alt="" width="40px">
+                            <div class="col-md-2">
+                                <img class="img-card-page36" src="../../../Assets/icons/person.png" alt="" width="40px">
                             </div>
-                            <div class="col-md-7">
-                                <ol style="list-style: none;padding-top: 20px;">
+                            <div class="col-md-8">
+                                <ol style="list-style: none;padding-top: 10px;">
                                     <li class="pb-1">
                                         <b>Name</b> - Ayush Singh
                                     </li>
                                     <li class="pb-1">
-                                        <b>Email</b> - ayush@gmail.com
+                                        <b>Requested on</b> - July 25th, 2020
                                     </li>
-                                    <li class="pb-1">
-                                        <b>Phone No </b> - +918276543211
-                                    </li>
-                                    <li class="pb-1">
-                                        <b>Assigned On</b> - July 25th, 2020
+                                    <li>
+                                          5 Items
                                     </li>
                                 </ol>
+                            </div>
+                            <div class="col-md-1">
+                                <div style="padding: 32px;;">
+                                    <img src="../../../Assets/icons/down-arrow.png" alt="" width="20px" style="cursor: pointer;">
+                                </div>
                             </div>
                         </div>
 
                         <div class="row row-card mb-4">
-                            <div class="col-md-3">
-                                <img class="img-card" src="../../../Assets/icons/person.png" alt="" width="40px">
+                            <div class="col-md-2">
+                                <img class="img-card-page36" src="../../../Assets/icons/person.png" alt="" width="40px">
                             </div>
-                            <div class="col-md-7">
-                                <ol style="list-style: none;padding-top: 20px;">
+                            <div class="col-md-8">
+                                <ol style="list-style: none;padding-top: 10px;">
                                     <li class="pb-1">
                                         <b>Name</b> - Ayush Singh
                                     </li>
                                     <li class="pb-1">
-                                        <b>Email</b> - ayush@gmail.com
+                                        <b>Requested on</b> - July 25th, 2020
                                     </li>
-                                    <li class="pb-1">
-                                        <b>Phone No </b> - +918276543211
-                                    </li>
-                                    <li class="pb-1">
-                                        <b>Assigned On</b> - July 25th, 2020
+                                    <li>
+                                          5 Items
                                     </li>
                                 </ol>
+                            </div>
+                            <div class="col-md-1">
+                                <div style="padding: 32px;;">
+                                    <img src="../../../Assets/icons/down-arrow.png" alt="" width="20px" style="cursor: pointer;">
+                                </div>
                             </div>
                         </div>
 
                         <div class="row row-card mb-4">
-                            <div class="col-md-3">
-                                <img class="img-card" src="../../../Assets/icons/person.png" alt="" width="40px">
+                            <div class="col-md-2">
+                                <img class="img-card-page36" src="../../../Assets/icons/person.png" alt="" width="40px">
                             </div>
-                            <div class="col-md-7">
-                                <ol style="list-style: none;padding-top: 20px;">
+                            <div class="col-md-8">
+                                <ol style="list-style: none;padding-top: 10px;">
                                     <li class="pb-1">
                                         <b>Name</b> - Ayush Singh
                                     </li>
                                     <li class="pb-1">
-                                        <b>Email</b> - ayush@gmail.com
+                                        <b>Requested on</b> - July 25th, 2020
                                     </li>
-                                    <li class="pb-1">
-                                        <b>Phone No </b> - +918276543211
-                                    </li>
-                                    <li class="pb-1">
-                                        <b>Assigned On</b> - July 25th, 2020
+                                    <li>
+                                          5 Items
                                     </li>
                                 </ol>
+                            </div>
+                            <div class="col-md-1">
+                                <div style="padding: 32px;;">
+                                    <img src="../../../Assets/icons/down-arrow.png" alt="" width="20px" style="cursor: pointer;">
+                                </div>
                             </div>
                         </div>
 
@@ -129,7 +135,7 @@
 
             <div class="col-md-2" style="background-color: #f0f3f8">
                 <h1>
-                    
+                    TODO
                 </h1>
             </div>
         </div>
